done some fix jobs