@@ -1,6 +1,6 @@
 package org.jabref.gui.search;
 
-import java.util.EnumSet;
+import java.util.Arrays;
 import java.util.List;
 
 import javafx.scene.text.Text;
@@ -9,8 +9,6 @@ import javafx.stage.Stage;
 
 import org.jabref.gui.search.rules.describer.ContainsAndRegexBasedSearchRuleDescriber;
 import org.jabref.gui.util.TooltipTextUtil;
-import org.jabref.model.search.rules.SearchRules;
-import org.jabref.model.search.rules.SearchRules.SearchFlags;
 import org.jabref.testutils.category.GUITest;
 
 import org.junit.jupiter.api.Test;
@@ -31,11 +29,13 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testSimpleTerm() {
         String query = "test";
-        List<Text> expectedTexts = List.of(
+        List<Text> expectedTexts = Arrays.asList(
                 TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
                 TooltipTextUtil.createText("test", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" (case insensitive). "));
-        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(EnumSet.noneOf(SearchFlags.class), query).getDescription();
+                TooltipTextUtil.createText(" (case insensitive). "),
+                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:"),
+                TooltipTextUtil.createText(" author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(false, false, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
     }
@@ -43,13 +43,15 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAst() {
         String query = "a b";
-        List<Text> expectedTexts = List.of(
+        List<Text> expectedTexts = Arrays.asList(
                 TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
                 TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
                 TooltipTextUtil.createText(" and "),
                 TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" (case insensitive). "));
-        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(EnumSet.noneOf(SearchFlags.class), query).getDescription();
+                TooltipTextUtil.createText(" (case insensitive). "),
+                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:"),
+                TooltipTextUtil.createText(" author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(false, false, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
     }
@@ -57,13 +59,11 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAstRegex() {
         String query = "a b";
-        List<Text> expectedTexts = List.of(
-                TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
-                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" and "),
-                TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" (case insensitive). "));
-        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(EnumSet.of(SearchRules.SearchFlags.REGULAR_EXPRESSION), query).getDescription();
+        List<Text> expectedTexts = Arrays.asList(TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
+                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" and "), TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" (case insensitive). "),
+                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:"),
+                TooltipTextUtil.createText(" author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(false, true, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
     }
@@ -71,13 +71,11 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAstRegexCaseSensitive() {
         String query = "a b";
-        List<Text> expectedTexts = List.of(
-                TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
-                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" and "),
-                TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" (case sensitive). "));
-        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE, SearchRules.SearchFlags.REGULAR_EXPRESSION), query).getDescription();
+        List<Text> expectedTexts = Arrays.asList(TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
+                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" and "), TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" (case sensitive). "),
+                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:"),
+                TooltipTextUtil.createText(" author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(true, true, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
     }
@@ -85,13 +83,11 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAstCaseSensitive() {
         String query = "a b";
-        List<Text> expectedTexts = List.of(
-                TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
-                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" and "),
-                TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" (case sensitive). "));
-        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(EnumSet.of(SearchRules.SearchFlags.CASE_SENSITIVE), query).getDescription();
+        List<Text> expectedTexts = Arrays.asList(TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
+                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" and "), TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" (case sensitive). "),
+                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:"),
+                TooltipTextUtil.createText(" author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(true, false, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
     }
